1999-12-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Colorset.c (SetWindowBackground):
	shape from colour set can be removed too

1999-12-09  olicha   <olivier.chapuis@free.fr>

	* libs/WinMagic.c (SlideWindow):
	* libs/fvwmlib.h:
	Minimum size and resize hints can be use by SlideWindow

1999-12-09  Bob Woodside  <proteus@pcnet.com>

	* fvwm/add_window.c (setup_focus_policy):
	* fvwm/events.c (HandleButtonPress):
	* fvwm/focus.c (DoSetFocus):
	More fixes to grab/ungrab for focus.

1999-12-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	* fvwm/add_window.c (setup_key_and_button_grabs):
	switched back to grabbing keys on parent window

1999-12-09  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/session.c (LoadGlobalState): restore only the current desk
	and page, and not other global state parameters (but they are still
	stored for now); some indenting in session.c

1999-12-07  Bob Woodside  <proteus@pcnet.com>

	* fvwm/virtual.c (gotoDeskAndPage_func):  Pager desk-switch fix,
	Part 2.

1999-12-06  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: Added link.

1999-12-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleFocusIn):
	fixed M_FOCUS_CHANGE packet sending

	* NEWS:
	added 2.2.x NEWS up to 2.2.4

1999-12-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_focus_policy):
	(setup_key_and_button_grabs):
	* fvwm/events.c (GetContext):
	(HandleButtonPress):
	grab buttons on client window instead of parent window; this prevents
	some unnecessary Leave/EnterNotify events but doesn't fix the broken
	double clicks

	* fvwm/gnome.c (HandleGnomePropRequest):
	use DrawDecorations() instead of old SetBorder()

1999-12-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c:
	* fvwm/functions.c:
	* fvwm/gnome.h:
	* fvwm/gnome.c:
	applied gnome patches by Matt Rossmiller

1999-12-04  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1 (vectorbuttonsytles): Point the reader to the web