@@ -100,6 +100,10 @@ colorset is applied to and \fIAscpectShape\fP will stretch to fit but will
 retain the bitmap aspect ratio.  If the file is a pixmap in xpm format,
 the shape mask of the pixmap is used.
 
+Warning: Due to the way X11 implements shapes and the implementation
+of the FvwmTheme module you cannot take back making windows shaped.
+You may have to restart fvwm or the shaped application.
+
 \fI?Gradient ...\fP will create a pixmap and stretch it to fit the window.
 \fI?Gradient\fP may be one of Hgradient, Vgradient, Dgradient, Bgradient,
 Sgradient, Cgradient, Rgradient or Ygradient.  The gradient types are as
